# rust_point

./: Cargo.toml  Makefile  README.md  docker-compose.yml
docs/plan/: 01-points-center-spec.md  backlog.md
docs/plan/01-point-center/: README.md  api.md  internals.md
docs/plan/02-ledger-movements/: README.md
docs/progress/: 0001-scaffold.md  0002-package-by-component-restructure.md  0003-domain-pure-functions.md  0004-redemption-lifecycle.md  0005-core-aggregates-and-ports.md  0006-migrations-sqlx.md  0007-ledger-grant-adapter.md  0008-compile-time-queries.md
docs/tech/: 01-tech-stack.md  02-package-by-component-layout.md  03-observability.md
projects/point-center/: Cargo.toml  Makefile  docker-compose.yml
projects/point-center/.sqlx/: query-786e8ee3b336a24e9b584bf679d19c21a1811230b8f8fb9da4be62e547a38ee3.json  query-e868dccc4561920592077fe081d53d2a2e688858e73a2d361b986e80e0340be0.json
projects/point-center/apps/expiry-job/: Cargo.toml
projects/point-center/apps/expiry-job/src/: main.rs
projects/point-center/apps/grant-worker/: Cargo.toml
projects/point-center/apps/grant-worker/src/: main.rs
projects/point-center/apps/internal-api/: Cargo.toml
projects/point-center/apps/internal-api/src/: main.rs
projects/point-center/apps/storefront-api/: Cargo.toml
projects/point-center/apps/storefront-api/src/: main.rs
projects/point-center/components/issuance/adapters/: Cargo.toml
projects/point-center/components/issuance/adapters/src/: lib.rs
projects/point-center/components/issuance/core/: Cargo.toml
projects/point-center/components/issuance/core/src/: expiration_policy.rs  issuance.rs  issuance_status.rs  lib.rs  ports.rs  status.rs
projects/point-center/components/ledger/adapters/: Cargo.toml
projects/point-center/components/ledger/adapters/queries/: grant_insert_points.sql
projects/point-center/components/ledger/adapters/sql/: grant_insert_transactions.sql
projects/point-center/components/ledger/adapters/src/: expiry_sql.rs  grant_store.rs  lib.rs
projects/point-center/components/ledger/adapters/tests/: grant_store.rs
projects/point-center/components/ledger/core/: Cargo.toml
projects/point-center/components/ledger/core/src/: deduction.rs  effective_window.rs  lib.rs  ports.rs  redemption.rs  redemption_status.rs  transaction_type.rs
projects/point-center/platform/db/: Cargo.toml
projects/point-center/platform/db/migrations/: 0001_issuances.sql  0002_ledger_points.sql  0003_redemptions.sql
projects/point-center/platform/db/src/: lib.rs
projects/points/apps/api/: Cargo.toml
projects/points/apps/api/src/: main.rs
projects/points/apps/worker/: Cargo.toml
projects/points/apps/worker/src/: main.rs
projects/points/crates/application/: Cargo.toml
projects/points/crates/application/src/: commands.rs  lib.rs  ports.rs  queries.rs
projects/points/crates/domain/: Cargo.toml
projects/points/crates/domain/src/: issuance.rs  lib.rs
projects/points/crates/infra/: Cargo.toml
projects/points/crates/infra/src/: lib.rs
