[workspace]
resolver = "3"
members = [
    "projects/*/crates/*",
    "projects/*/apps/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# internal crates (bounded context: points)
points-domain = { path = "projects/points/crates/domain" }
points-application = { path = "projects/points/crates/application" }
points-infra = { path = "projects/points/crates/infra" }

# async runtime & web
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.7", features = ["trace"] }

# messaging
async-nats = "0.49"

# database
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# common
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
