[package]
name = "point-center-expiry-job"
version.workspace = true
edition.workspace = true

[dependencies]
point-center-ledger-core.workspace = true
point-center-ledger-adapters.workspace = true
tokio.workspace = true
async-nats.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
