[package]
name = "point-center-internal-api"
version.workspace = true
edition.workspace = true

[dependencies]
point-center-issuance-core.workspace = true
point-center-issuance-adapters.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
async-nats.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
