[package]
name = "points-api"
version.workspace = true
edition.workspace = true

[dependencies]
points-domain.workspace = true
points-application.workspace = true
points-infra.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
