[package]
name = "points-worker"
version.workspace = true
edition.workspace = true

[dependencies]
points-domain.workspace = true
points-application.workspace = true
points-infra.workspace = true
tokio.workspace = true
async-nats.workspace = true
serde_json.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
