[package]
name = "points-infra"
version.workspace = true
edition.workspace = true

[dependencies]
points-domain.workspace = true
points-application.workspace = true
async-nats.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
