[package]
name = "point-center-ledger-adapters"
version.workspace = true
edition.workspace = true

[dependencies]
point-center-ledger-core.workspace = true
sqlx.workspace = true
async-nats.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
# 整合測試對真實 PG(Podman)跑;需 DATABASE_URL,未設則跳過。
point-center-db.workspace = true
tokio = { workspace = true }
